tests/snapshots/ui__ui_test_err_decompress_missing_extension-2.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch decompress a b.unknown\", dir)"
---
[ERROR] Cannot decompress files
 - Files with unsupported extensions: <FOLDER>/b.unknown
 - Files with missing extensions: <FOLDER>/a
 - Decompression formats are detected automatically from file extension

hint: Supported extensions are: tar, zip, bz, bz2, bz3, gz, lz4, xz, lzma, sz, zst
hint: Supported aliases are: tgz, tbz, tlz4, txz, tzlma, tsz, tzst

