tests/snapshots/ui__ui_test_err_decompress_missing_extension-3.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch decompress b.unknown\", dir)"
---
[ERROR] Cannot decompress files
 - Files with unsupported extensions: <FOLDER>/b.unknown
 - Decompression formats are detected automatically from file extension

hint: Supported extensions are: tar, zip, bz, bz2, bz3, gz, lz4, xz, lzma, sz, zst
hint: Supported aliases are: tgz, tbz, tlz4, txz, tzlma, tsz, tzst
hint: 
hint: Alternatively, you can pass an extension to the '--format' flag:
hint:   ouch decompress <FOLDER>/b.unknown --format tar.gz

