tests/snapshots/ui__ui_test_err_decompress_missing_extension.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch decompress a\", dir)"
---
[ERROR] Cannot decompress files
 - Files with missing extensions: <FOLDER>/a
 - Decompression formats are detected automatically from file extension

hint: Supported extensions are: tar, zip, bz, bz2, bz3, gz, lz4, xz, lzma, sz, zst
hint: Supported aliases are: tgz, tbz, tlz4, txz, tzlma, tsz, tzst
hint: 
hint: Alternatively, you can pass an extension to the '--format' flag:
hint:   ouch decompress <FOLDER>/a --format tar.gz

