tests/snapshots/ui__ui_test_err_decompress_missing_extension_with_rar-3.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch decompress b.unknown\", dir)"
---
[ERROR] Cannot decompress files
 - Files with unsupported extensions: "b.unknown"
 - Decompression formats are detected automatically from file extension and signature

hint: Supported extensions are: tar, zip, bz, bz2, bz3, gz, lz4, xz, lzma, lz, sz, zst, rar, 7z
hint: Supported aliases are: tgz, tbz, tlz4, txz, tlzma, tsz, tzst, tlz, cbt, cbz, epub, cb7, cbr
hint: 
hint: Alternatively, you can pass an extension to the '--format' flag:
hint:   ouch decompress b.unknown --format tar.gz
